<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">AlarmManager</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="title">Meeting</string>
    <string name="Description">Meeting With Osama</string>
    <string name="time">9.15 pm</string>
    <string name="reminder_time">10.15 pm</string>
    <string name="date">9.10.15</string>
    <string name="reminder_date">8.10.15</string>
    <string name="title_reminder_time">Reminding at</string>
    <string name="title_time">Time</string>
    <string name="title_activity_details">DetailsActivity</string>
    <string name="title_activity_add">AddActivity</string>
    <string name="details_title">Add Details</string>
    <string name="main_title">Add Title</string>
    <string name="set_time">Set Time</string>
    <string name="title_activity_message">MessageActivity</string>
    <string name="set_message">Write Your Message :</string>
    <string name="to">To :</string>
    <string name="message_body">Body : </string>
    <string name="title_activity_email">EmailActivity</string>

</resources>
