<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="16dp"
     android:background="@drawable/listselector"
     >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/tv_title_list"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title"
            android:layout_weight="1"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <TextView
            android:id="@+id/tv_on_off"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="on"
            android:layout_weight="0"
             />
        
        
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="10dp"
         >

       

        <TextView
            android:id="@+id/tv_date_list"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/date"
            android:textAppearance="?android:attr/textAppearanceListItemSmall" />

        <TextView
            android:id="@+id/tv_time_list"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/time"
            android:textAppearance="?android:attr/textAppearanceListItemSmall" />

    </LinearLayout>

</LinearLayout>