<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/scrollView1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp" 
    android:background="@android:color/darker_gray">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/tv_title_message"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/set_message"
            android:textAppearance="?android:attr/textAppearanceLarge" />
        
        <View
            android:layout_width="fill_parent"
            android:layout_height="2dp"
            android:background="#c0c0c0" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" 
            android:paddingTop="10dp">

            <TextView
                android:id="@+id/tv_message_to"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0"
                android:text="@string/to"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <EditText
                android:id="@+id/et_phone_number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="number" >

                <requestFocus />
            </EditText>

             <ImageButton
                android:id="@+id/button1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
               android:layout_weight="0"
                android:onClick="contact"
                android:src="@drawable/ic" />
            
        </LinearLayout>
         

        <TextView
            android:id="@+id/tv_message_body"
            android:layout_width="wrap_content"
            android:paddingTop="10dp"
            android:layout_height="wrap_content"
            android:text="@string/message_body"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <EditText
            android:id="@+id/et_message_body"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textMultiLine" />

        <TextView
            android:id="@+id/tv_time_title_add"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="6dp"
            android:text="@string/set_time"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <View
            android:layout_width="fill_parent"
            android:layout_height="2dp"
            android:background="#c0c0c0" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" 
            android:paddingTop="10dp">

            <DatePicker
                android:id="@+id/datePicker1_message"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1" />
     
        </LinearLayout>
        
        <TimePicker
                android:id="@+id/timePicker1_message"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1" />
    </LinearLayout>

</ScrollView>